--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
   "name": "w-user",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "A simple server for users in nodejs and browser, like a simple SSO.",
   "main": "dist/w-user-server.umd.js",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
+    "lodash": "^4.17.15",
     "nodemailer": "^6.4.2",
-    "w-comor-hapi": "^1.0.19",
-    "w-email": "^1.0.17",
-    "w-orm-mongodb": "^1.1.15",
-    "w-orm-reladb": "^1.0.1",
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/node": "^7.7.4",
+    "w-comor-hapi": "^1.0.21",
+    "w-email": "^1.0.18",
+    "w-orm-mongodb": "^1.1.16",
+    "w-orm-reladb": "^1.0.2",
+    "wsemi": "^1.3.9"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/node": "^7.7.7",
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/register": "^7.7.4",
-    "@babel/runtime": "^7.7.6",
-    "core-js": "^3.5.0",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/register": "^7.7.7",
+    "@babel/runtime": "^7.7.7",
+    "core-js": "^3.6.1",
     "docdash": "^1.1.1",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint-plugin-vue": "^6.1.2",
     "gh-pages": "^2.1.1",
     "jsdoc": "^3.6.3",
-    "jsdoc-vuejs": "^3.0.5",
-    "dayjs": "^1.8.17",
-    "lodash": "^4.17.15",
+    "jsdoc-vuejs": "^3.0.7",
     "mocha": "^6.2.2",
-    "rollup": "^1.27.13",
+    "rollup": "^1.27.14",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
@@ -45,8 +46,7 @@
     "rollup-plugin-vue": "^5.1.4",
     "rollup-plugin-vue-template-compiler": "^1.0.3",
     "vue-template-compiler": "^2.6.11",
-    "w-package-tools": "^1.0.12",
-    "wsemi": "^1.2.54"
+    "w-package-tools": "^1.0.13"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --require @babel/register",
